--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1924,7 +1924,7 @@ modal > div, .dialog > div {
 	margin: 10px auto;
 	background: white;
 	padding: 10px 20px;
-	width: 600px;
+	max-width: 600px;
 	border-radius: 10px;
 }
 
