--- a/app/views/form.html
+++ b/app/views/form.html
@@ -7,11 +7,29 @@
 					<div class="grid-20 mobile-grid-100 grid-parent">
 						{{fld.title}}<span *ngIf=fld.req class="error" title="required"> *</span>
 					</div>
-					<div class="grid-80 mobile-grid-100 grid-parent">
+					<div class="grid-80 mobile-grid-100 grid-parent" style="margin-top:13px;">
+						<div *ngIf="fld.image">
+							<span class="result rounded" *ngIf="cropData.image">
+								<img [src]="cropData.image" style="max-width: 500px; border-radius: 10px;" height="200px">
+								<br>
+							</span>
+							<a href="javascript:" class="btn btn-xs btn-green1" (click)="imgDlg.show(fld)">Select</a>
+							<modal title="Select A Featured Image" width="300px" [buttons]=imgButtons #imgDlg>
+								<div>
+									<input id="custom-input" type="file" (change)="loadImage($event)">
+									<label for="custom-input" class="btn btn-xs btn-green1"><strong>Choose file &#187;</strong></label>
+								</div>
+								<br>
+								<img-cropper #cropper [image]="cropData" [settings]="cropperSettings"></img-cropper>
+							</modal>
+						</div>
+
 						<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
 							(blur)="updateValue(input)" (focus)="setAttrs(input)">{{binders[fld.name].value}}</textarea>
+
 						<input #input *ngIf="fld.input" class="form-control" type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
 							[value]="getValue(input)" (change)="updateValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
+
 						<div class="onoffswitch status" data-for="toggle-status" *ngIf="fld.toggle">
 							<input #input type="checkbox" name="status" class="onoffswitch-checkbox" name="{{fld.name}}"
 								[checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
@@ -20,11 +38,13 @@
 								<span class="onoffswitch-switch"></span>
 							</label>
 						</div>
+
 						<div class="checkbox" *ngIf="fld.checkbox">
 							<input #input class="form-control" type="checkbox" name="{{fld.name}}"
 								[checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
 							<label [attr.for]="fld.name" (click)="setCheckbox($event.target)">{{fld.placeholder || fld.title}}</label>
 						</div>
+
 						<span style="display: block" *ngIf="binders[fld.name].touched && binders[fld.name].error"><span class="error">*</span> {{binders[fld.name].error}}</span>
 					</div>
 				</div>
