--- a/app/views/form.html
+++ b/app/views/form.html
@@ -9,8 +9,14 @@
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent" style="margin-top:13px;">
 						<div *ngIf="fld.image">
+							<span class="result rounded" *ngIf="!cropData.image && getValue(fld)">
+								<!_- make generic -->
+								<img [src]="getValue(fld)" style="max-width: 500px; border-radius: 100px;" height="200px">
+								<br>
+							</span>
 							<span class="result rounded" *ngIf="cropData.image">
-								<img [src]="cropData.image" style="max-width: 500px; border-radius: 10px;" height="200px">
+								<!_- make generic -->
+								<img [src]="cropData.image" style="max-width: 500px; border-radius: 100px;" height="200px">
 								<br>
 							</span>
 							<a href="javascript:" class="btn btn-xs btn-green1" (click)="imgDlg.show(fld)">Select</a>
