handle upload profile picture with the new api changes

--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -1,7 +1,7 @@
 <div class="grid-15 mobile-grid-100 grid-parent content-holder left-sb" *ngIf="user">
 	<div class="pushDown"></div>
 	<div class="user-section">
-		<img src="{{ user.profilePhoto }}" class="avatar" />
+		<img src="{{ user.imageUrl }}" class="avatar" style="width: 75px">
 		<label>{{ user.name }}</label>
 	</div>
 
