user image change

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -14,7 +14,7 @@
 								<br>
 							</span>
 							<span class="result rounded" *ngIf="cropData.image">
-								<!_- make generic -->
+								<!-- make generic -->
 								<img [src]="cropData.image" style="max-width: 500px; border-radius: 100px;" height="200px">
 								<br>
 							</span>
