remove reporting for agencies and make sure the user is redirected to their manage page.

--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -21,7 +21,7 @@
 	<div class="user-account-options" *ngIf="user.adAgency">
 		<ul>
 			<li class="li-campaign"><a [routerLink]="['/mAdvertisers', user.id]" [routerLinkActive]="['is-active']">My Advertisers</a></li>
-			<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
+			<!--<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>-->
 		</ul>
 	</div>
 
@@ -29,7 +29,7 @@
 		<div class="user-account-options">
 			<ul>
 				<li class="li-influencers"><a [routerLink]="['/mTalents', user.id]" [routerLinkActive]="['is-active']">My Talent</a></li>
-				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
+				<!--<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>-->
 			</ul>
 		</div>
 	</div>
