--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -31,7 +31,10 @@
 			<td>{{FmtMoney(t.agSpend)}}</td>
 			<td>{{t.createdAt * 1000 | date}}</td>
 			<td title="{{contactInfo(t)}}" class="email ttip">View</td>
-			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(t)>Edit</button> | <button class="btn-scarlet btn-micro ghost" (click)=Delete(t.id)>X</button></td>
+			<td>
+				<!--<button class="btn-info btn-micro ghost" (click)=edlg.show(t)>Edit</button> | -->
+				<button class="btn-scarlet btn-micro ghost" (click)="delete(t)">X</button>
+			</td>
 		</tr>
 	</tbody>
 </table>
