remove unused delete buttons

--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -25,7 +25,8 @@
 			<td>{{adv.numCmps}}</td>
 			<td>{{adv.email}}</td>
 			<td>{{adv.createdAt * 1000 | date}}</td>
-			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(adv)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
+			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(adv)>Edit</button></td>
+			<!--| <button class="btn-scarlet btn-micro ghost">X</button>-->
 		</tr>
 	</tbody>
 </table>
