hide the social invite buttons for now

--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -51,7 +51,7 @@
 		<h3 style="color:#d2335c;">Your invite code is:</h3> <input type="text" value="{{ inviteUrl }}" class="form-control" readonly onfocus="this.select();" onmouseup="return false;">
 	</div>
 
-	<div class="clearfix br"></div>
+	<!--<div class="clearfix br"></div>
 
 	<div class="form-group">
 		<div class="grid-20 mobile-grid-100 grid-parent">
@@ -107,5 +107,5 @@
 			<br>
 			<a class="btn btn-info">Share</a>
 		</div>
-	</div>
+	</div>-->
 </modal>
