--- a/app/views/mAgencies.html
+++ b/app/views/mAgencies.html
@@ -31,5 +31,5 @@
 </table>
 
 
-<smart-form #cdlg class="dialog" [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Media Agency"></smart-form>
+<smart-form #cdlg class="dialog" [fields]=createFields (onSave)="save($event.data, $event.done)" title="Create Media Agency"></smart-form>
 <smart-form #edlg class="dialog" [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Media Agency"></smart-form>
