--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -40,7 +40,7 @@
 	</tbody>
 </table>
 
-<smart-form #cdlg class="dialog" [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Talent"></smart-form>
+<smart-form #cdlg class="dialog" [fields]=createFields (onSave)="save($event.data, $event.done)" title="Create Talent"></smart-form>
 <smart-form #edlg class="dialog" [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Talent"></smart-form>
 <modal title="Invite New Talent" #invModal>
 	<div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
