--- a/static/css/style.css
+++ b/static/css/style.css
@@ -189,7 +189,7 @@ box-shadow: inset 0 20px 0px -17px #65256f;color:#fff;
 	background-position: -219px 0px;
 	top: 10px;right: 10px;
 }
-.form-group.has-icon.icon-left .form-control{padding-left:40px;}
+.form-group.has-icon.icon-left .form-control, .form-group.has-icon.icon-left input[type="search"] {padding-left:40px;}
 .form-group.has-icon.icon-left:after{
 	background-position: -218px 0px;
 	top: 10px;left: 10px;
@@ -1976,3 +1976,4 @@ input[type="file"] {
 	position: absolute;
 	z-index: -1;
 }
+
