--- a/app/views/forgotPassword.html
+++ b/app/views/forgotPassword.html
@@ -1,6 +1,6 @@
 <form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="ForgotPassword()">
 	<div class="top">
-		<!--<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>-->
+		<div class="grid-50 grid-parent">&nbsp;<!--<a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a>-->x</div>
 		<div class="grid-50 grid-parent align-right"><a [routerLink]="['/login']" class="forgot">Log in</a></div>
 		<div class="grid-100 grid-parent">
 			<h2>FORGOT PASSWORD</h2>
