remove dead code

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="grid-40 mobile-grid-100 top-search">
 			<div class="form-group has-icon icon-search icon-left">
-				<select id="globalSearch" multiple class="form-control multiselect multiselect-info" (change)="setSelected($event.target)"></select>
+				<select id="globalSearch" multiple class="form-control multiselect multiselect-info"></select>
 			</div>
 		</div>
 		<div class="grid-30 mobile-grid-100">
