--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -15,6 +15,7 @@
 			<li><a [routerLink]="['/mCampaignPerks']" [routerLinkActive]="['is-active']">Perks Inbound</a></li>
 			<li><a [routerLink]="['/mOutboundPerks']" [routerLinkActive]="['is-active']">Perks To Ship</a></li>
 			<li><a [routerLink]="['/checkPayouts']" [routerLinkActive]="['is-active']">Check Payouts</a></li>
+			<li><a [routerLink]="['/assignGame']" [routerLinkActive]="['is-active']">Assign Game</a></li>
 		</ul>
 	</div>
 
