use infAppUrl from the template

--- a/app/views/assignGame.html
+++ b/app/views/assignGame.html
@@ -24,7 +24,7 @@
 		</p>
 		<br/><br/>
 		<p>
-			<a target="_blank" href="/infApp/forceLogin/{{inf.id}}" class="btn-default btn-xs">Control influencers account &#187;
+			<a target="_blank" href="{{ settings.infAppUrl }}/forceLogin/{{inf.id}}" class="btn-default btn-xs">Control influencers account &#187;
 </a>
 		</p>
 	</div>
