angular2 compiler-cli / rollup

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -6,7 +6,7 @@
 
 					<div class="onoffswitch status" data-for="toggle-status">
 						<input type="checkbox" name="status" class="onoffswitch-checkbox" id="status" [(ngModel)]="data.status">
-						<label class="onoffswitch-label" for="status" (click)="setBool($event)">
+						<label class="onoffswitch-label" for="status">
 							<span class="onoffswitch-inner"></span>
 							<span class="onoffswitch-switch"></span>
 						</label>
@@ -170,8 +170,7 @@
 						<span class="ttip" title="This will attempt to only leverage influencers who primarily reside within your geo selection.">Geo: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<select multiple="multiple" class="geo form-control multiselect multiselect-info" (change)="setSelected($event.target)"></select>
-						<!--<option *ngFor="let c of countriesList" [value]=c.abbr>{{c.name}}</option>-->
+						<select multiple="multiple" class="geo form-control multiselect multiselect-info"></select>
 					</div>
 				</div>
 				<br/>
