--- a/app/views/contentFeed.html
+++ b/app/views/contentFeed.html
@@ -23,7 +23,7 @@
 <template ngFor let-it [ngForOf]="list | filter:FilterByUserName">
 	<div class="grid-100 mobile-grid-100 grid-parent auditRow">
 		<a href="{{it.url}}" target="_blank">
-			<div align="center" class="grid-25 mobile-grid-100 grid-parent auditPic" style="background: #fff url(./static/img/exampleAudit.jpg) no-repeat 0 0; background-size: cover;"></div>
+			<img align="center" class="grid-25 mobile-grid-100 grid-parent auditPic" [src]="it.socialImage">
 		</a>
 		<div class="grid-60 mobile-grid-100 grid-parent auditDesc">
 			<div class="auditRowHeader">{{it.username}}</div>
@@ -38,7 +38,7 @@
 			</small>
 			<small style="font-size: 10px;">
 				Published: <span id="counts" style="font-size: 10px;">{{it.published * 1000 | date}}</span>
-				Campaign ID: <span id="counts" style="font-size: 10px;">{{it.campaignID || 'N/A'}}</span> 
+				Campaign ID: <span id="counts" style="font-size: 10px;">{{it.campaignID || 'N/A'}}</span>
 				Campaign Name: <span id="counts" style="font-size: 10px;">{{it.campaignName || 'N/A'}}</span>
 			</small>
 		</div>
