add status column to manage campaigns

--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -14,6 +14,7 @@
 			<th>ID</th>
 			<th>Budget</th>
 			<th title="Active Networks">Networks</th>
+			<th>Status</th>
 			<th>Created Date</th>
 			<th>Actions</th>
 		</tr>
@@ -29,8 +30,9 @@
 				<img width="20" src="/static/img/instagram.png" title="Instagram" *ngIf=cmp.instagram>
 				<img width="20" src="/static/img/youtube.png" title="YouTube" *ngIf=cmp.youtube>
 			</td>
+			<td>{{cmp.status ? 'On' : 'Off'}}</td>
 			<td>{{cmp.createdAt * 1000 | date}}</td>
-			<td><button class="btn-green1 btn-micro ghost" (click)="selDate.show(cmp);">Report</button> | <button class="btn-info btn-micro ghost" [routerLink]="['/editCampaign', cmp.advertiserId, cmp.id]">Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
+			<td><button class="btn-green1 btn-micro ghost" (click)="selDate.show(cmp);">Report</button> <button class="btn-info btn-micro ghost" [routerLink]="['/editCampaign', cmp.advertiserId, cmp.id]">Edit</button> <button class="btn-scarlet btn-micro ghost">X</button></td>
 		</tr>
 	</tbody>
 </table>
