--- a/app/views/contentFeed.html
+++ b/app/views/contentFeed.html
@@ -23,11 +23,10 @@
 <template ngFor let-it [ngForOf]="list | filter:FilterByUserName">
 	<div class="grid-100 mobile-grid-100 grid-parent auditRow">
 		<a href="{{it.url}}" target="_blank">
-			<img align="center" class="grid-25 mobile-grid-100 grid-parent auditPic" [src]="it.socialImage">
+			<div align="center" class="grid-25 mobile-grid-100 grid-parent auditPic"><img [src]="it.socialImage"></div>
 		</a>
 		<div class="grid-60 mobile-grid-100 grid-parent auditDesc">
 			<div class="auditRowHeader">{{it.username}}</div>
-
 			<p>{{it.caption}}</p>
 			<small>
 				Views: <span id="counts">{{it.views || 'N/A'}}</span>
