--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -23,7 +23,7 @@
 							<img [src]="cropData.image" style="max-width: 500px; border-radius: 10px;" height="200px">
 							<br>
 						</span>
-						<a href="javascript:" class="btn btn-xs btn-green1" (click)="toggleImage()">Select</a> <a href="#">See placement examples</a>
+						<a href="javascript:" class="btn btn-xs btn-green1" (click)="toggleImage()">Select</a> <a href="http://swayops.com/wiki/selecting-deals.php" target="_blank">See placement examples</a>
 						<div class="dialog" id="selImage">
 							<div style="width: 750px;" class="nosel">
 								<h2 class="heading">Select A Featured Image
