--- a/static/css/progressbar.css
+++ b/static/css/progressbar.css
@@ -837,6 +837,7 @@ button.ui-button::-moz-focus-inner {
 	max-width: 300px;
 	-webkit-box-shadow: 0 0 5px #aaa;
 	box-shadow: 0 0 5px #aaa;
+	background-color: #fff;
 }
 body .ui-tooltip {
 	border-width: 2px;
@@ -1195,8 +1196,8 @@ body .ui-tooltip {
 .ui-widget-shadow {
 	margin: -8px 0 0 -8px;
 	padding: 8px;
-	background: #aaaaaa;
-	opacity: .3;
+	background: #fff;
+	opacity: 1;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 	border-radius: 8px;
 }
