remove readonly from the invite code field

--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -49,7 +49,7 @@
 	</div>
 	<div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
 		<h3 style="color:#d2335c;">Your invite code is ( <strong>{{ this.user.talentAgency?.inviteCode }}</strong> ):</h3>
-		<input type="text" value="{{ inviteUrl }}" class="form-control" readonly onfocus="this.select();" onmouseup="return false;">
+		<input type="text" value="{{ inviteUrl }}" class="form-control" onfocus="this.select();" onmouseup="return false;">
 	</div>
 
 	<!--<div class="clearfix br"></div>
