footer link change

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -2,7 +2,7 @@
 	<div class="grid-100 mobile-grid-100 bottom-2nd">
 		<div class="grid-50 mobile-grid-100 align-left">
 			<p><img width="15" src="/static/img/sway-ops-logo.png" /> SWAY OPS is made with <span class="fui-heart"></span> in the USA
-				- <a href="//swayops.com/privacy.html">Privacy Policy</a> | <a href="//swayops.com/terms.html">Terms</a> | <a href="//swayops.com/wiki/">Wiki</a></p>
+				- <a target="_blank" href="https://swayops.com/terms-policy-cookies.html">Privacy Policy</a> | <a target="_blank" href="https://swayops.com/terms-policy-cookies.html">Terms</a> | <a href="//swayops.com/wiki/">Wiki</a></p>
 		</div>
 		<div class="grid-50 mobile-grid-100 copyright align-right">
 			<p>© Sway Ops LLC, 2016. All Rights Reserved.</p>
