placeholder for billing charges

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -318,5 +318,11 @@
 				<p><label>Influencer Groups:</label> {{sidebar.categories}}</p>
 			</div>
 		</li>
+		<li>
+			<div class="grid-100 mobile-grid-100" style="text-transform:capitalize;">
+				<p><label>Bill to:</label> <span style="font-size: 10px;">****-****-****-</span>{{last4CC}}</p>
+				<p><label>Total charge:</label> {{aboutToBeCharged}}</p>
+			</div>
+		</li>
 	</ul>
 </div>
