route change for new billing page + live chat sup

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -8,9 +8,9 @@
 			<div class="grid-50 mobile-grid-50">
 				<ul class="hdr-opts">
 					<a href="#">
-						<li title="Live Chat with a Sway expert" class="info ttip"><span></span></li>
+						<li onclick="Intercom('show')" title="Live Chat with a Sway expert" class="info ttip"><span></span></li>
 					</a>
-					<a [routerLink]="['/billing']">
+					<a [routerLink]="['/mBilling']">
 						<li title="View &amp; manage billing" class="card ttip"><span></span></li>
 					</a>
 				</ul>
