style fixes and make cc input cleaner

--- a/app/views/mBilling.html
+++ b/app/views/mBilling.html
@@ -26,7 +26,7 @@
 
 			<small><a (click)="isEditing = true" title="Edit">edit billing info</a></small>
 		</div>
-		<form #f="ngForm" novalidate (ngSubmit)="save()" *ngIf="isEditing || !cc.cardNumber">
+		<form #f="ngForm" (ngSubmit)="save(f)" *ngIf="isEditing">
 			<div class="form-group">
 				<div class="grid-100 mobile-grid-100 grid-parent">
 					<input name="firstName" type="text" placeholder="First Name" class="form-control" [(ngModel)]="cc.firstName" required>
@@ -54,23 +54,44 @@
 					&nbsp;
 				</div>
 				<div class="grid-50 mobile-grid-100 grid-parent">
-					<input name="zip" type="text" placeholder="Zip" class="form-control" [(ngModel)]="cc.zip" required><br><br>
+					<input name="zip" type="text" placeholder="Zip" class="form-control" [(ngModel)]="cc.zip" required minlength="5"><br><br>
 				</div>
 
-				<div class="grid-100 mobile-grid-100 grid-parent">
-					<input name="cardNumber" type="text" placeholder="Credit Card Number" class="form-control" (ngModel)="cc.cardNumber" required><br><br>
+				<div class="grid-100 mobile-grid-100 grid-parent cc-parent">
+					<div class="grid-20 mobile-grid-20">
+						<input #cc0 name="cc0" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[0]" required min="1000"
+							max="9999" (keyup)="checkNext($event, cc1)" onfocus="this.select()">
+					</div>
+					<div class="grid-5 mobile-grid-5 cc-sep">-</div>
+					<div class="grid-20 mobile-grid-20">
+						<input #cc1 name="cc1" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[1]" required min="1000"
+							max="9999" (keyup)="checkNext($event, cc2)" onfocus="this.select()">
+					</div>
+					<div class="grid-5 mobile-grid-5 cc-sep">-</div>
+					<div class="grid-20 mobile-grid-20">
+						<input #cc2 name="cc2" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[2]" required min="1000"
+							max="9999" (keyup)="checkNext($event, cc3)" onfocus="this.select()">
+					</div>
+					<div class="grid-5 mobile-grid-5 cc-sep">-</div>
+					<div class="grid-20 mobile-grid-20">
+						<input #cc3 name="cc3" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[3]" required min="1000"
+							max="9999" onfocus="this.select()">
+					</div>
+					<div class="clearfix br"></div>
 				</div>
 				<div class="grid-40 mobile-grid-100 grid-parent">
-					<input name="expMonth" type="text" placeholder="Exp Month" class="form-control" [(ngModel)]="cc.expMonth" required><br><br>
+					<input name="expMonth" type="number" placeholder="Exp Month" class="form-control" [(ngModel)]="cc.expMonth" required min="1"
+						max="12"><br><br>
 				</div>
 				<div class="grid-10 mobile-grid-100 grid-parent">
 					&nbsp;
 				</div>
 				<div class="grid-50 mobile-grid-100 grid-parent">
-					<input name="expYear" type="text" placeholder="Exp Year" class="form-control" [(ngModel)]="cc.expYear" required><br><br>
+					<input name="expYear" type="number" placeholder="Exp Year" class="form-control" [(ngModel)]="cc.expYear" required min="2017">
+					<br><br>
 				</div>
 				<div class="grid-40 mobile-grid-100 grid-parent">
-					<input name="cvc" type="text" placeholder="CVC" class="form-control" [(ngModel)]="cc.cvc" required>
+					<input name="cvc" type="number" placeholder="CVC" class="form-control" [(ngModel)]="cc.cvc" required min="100" max="9999">
 				</div>
 				<div class="grid-10 mobile-grid-100 grid-parent">
 					&nbsp;
@@ -78,9 +99,8 @@
 				<div class="grid-50 mobile-grid-100 grid-parent">
 					<a href="https://swayops.com/wiki/cvc.php" target="_blank">Where is CVC/ CVV?</a>
 				</div>
-				<!--<div class="clearfix"></div>-->
 				<div class="grid-100 mobile-grid-100 grid-parent align-right">
-					<br><button class="btn btn-block btn-sm btn-green1" [disabled]="!f.valid">Save payment info &#187;</button>
+					<br><button class="btn btn-block btn-sm btn-green1" [disabled]="!f.valid || f.pristine">Save payment info &#187;</button>
 				</div>
 			</div>
 		</form>
@@ -92,19 +112,4 @@
 		<b>{{ch.created * 1000 | date}}</b> | {{ch.transactionID}} <br> {{ch.id}} | {{ch.name}}<br> Amount:
 		<span style="color:#23c466; font-size: 12px; font-weight: bold;">${{ (ch.amount / 100).toFixed(2) }}</span>
 	</p>
-	<!--<p>
-		<b>{{Charge date}}</b> | {{TransactionID}} <br> {{CID}} | {{Campaign Name}} <br> ****-****-****-{{Last 4 digits of cc}}<br>		Amount: <span style="color:#23c466; font-size: 12px; font-weight: bold;">{{Amount charged}}</span>
-	</p>
-	<hr>
-	<p>
-		<b>{{Charge date}}</b> | {{TransactionID}} <br> {{CID}} | {{Campaign Name}} <br> ****-****-****-{{Last 4 digits of cc}}<br>		Amount: <span style="color:#23c466; font-size: 12px; font-weight: bold;">{{Amount charged}}</span>
-	</p>
-	<hr>
-	<p>
-		<b>{{Charge date}}</b> | {{TransactionID}} <br> {{CID}} | {{Campaign Name}} <br> ****-****-****-{{Last 4 digits of cc}}<br>		Amount: <span style="color:#23c466; font-size: 12px; font-weight: bold;">{{Amount charged}}</span>
-	</p>
-	<hr>
-	<p>
-		<b>{{Charge date}}</b> | {{TransactionID}} <br> {{CID}} | {{Campaign Name}} <br> ****-****-****-{{Last 4 digits of cc}}<br>		Amount: <span style="color:#23c466; font-size: 12px; font-weight: bold;">{{Amount charged}}</span>
-	</p>-->
 </div>
